# NuestroRepositorio

./: README.md
backend/: .gitignore  pyproject.toml
backend/CoreRoot/CoreRoot/: settings.py  urls.py
backend/CoreRoot/core/auth/: serializers.py  viewsets.py
backend/CoreRoot/core/user/: models.py  serializers.py  views.py  viewsets.py
backend/CoreRoot/core/user/migrations/: 0001_initial.py
frontend/repositorioapp/: .gitignore  package.json
frontend/repositorioapp/src/: App.js  index.js
frontend/repositorioapp/src/Components/Profile/: Login.js  Profile.js  Register.js  userSlice.js
